Added title and author

--- a/DSL-ReportCard.tex
+++ b/DSL-ReportCard.tex
@@ -44,10 +44,10 @@
 
 \begin{document}
 
-\title{\textbf{DSL Name}
+\title{\textbf{DSL for Software Configuration Management}
 \\ DSL Report Card}
 
-\author{Author \\
+\author{Sergii Shmarkatiuk \\
 School of EECS \\ 
 Oregon State University
 }
