--- a/DSL-ReportCard.tex
+++ b/DSL-ReportCard.tex
@@ -66,19 +66,19 @@ Oregon State University
 \section{Introduction}
 \label{sec:intro}
 
-\textbf{Domain}: Software Configuration Management (SCM). SCM domain includes such activities as \textit{version control}, \textit{build management}, \textit{deployment management}, \textit{continuous integration}, \textit{release management}, \textit{dependencies management}, \textit{branch management} and \textit{merge management}. Mentioned activities have one important thing in common - they use version numbers as unique references to software artifacts. Even though version numbers are widely used, there are numerous problems with version numbering approaches that inhibit development of general purpose tools for SCM. Most common problems with version numbering:
+\textbf{Domain}: Software Configuration Management (SCM). SCM domain includes such activities as \textit{version control}, \textit{build management}, \textit{deployment management}, \textit{continuous integration}, \textit{release management}, \textit{dependencies management}, \textit{branch management} and \textit{merge management}. Mentioned activities have one important thing in common - they use version numbers as unique references to software artifacts. Even though version numbers are widely used, certain problems with version numbering approaches that inhibit development of general purpose tools for SCM. Most common problems with version numbering are:
 \begin{enumerate}
- \item Version numbers if created using existing common practices may not necessarily be unique. 
+ \item Version numbers if may not necessarily be unique. 
  \item Version numbering approaches are not formalized to an extent that would allow embedding automatic version numbering into commonly used SCM tools (for example, version control systems).
  \item Very often there is an attempt to use version numbers to represent different kinds of changes between different artifacts, but existing practices of assigning meaning to version numbers are far from consistent (change depending on context and different situations) and cannot be reliably used to represent meaning of version numbers.
 \end{enumerate}
 
-Main goals of DSL for Software Configuration Management is to solve aforementioned problems by:
+Main goals of DSL for Software Configuration Management is to:
 \begin{itemize}
- \item Introducing unambiguous formalization of version numbering approach.
- \item Extending formalized version numbering approach with additional constructs (such as maturity levels, version filters, etc) to cover common use cases related to Software Configuration Management.
- \item Providing interface for mapping "old style" version numbering to consistent version numbering implemented as a DSL for SCM.
- \item Generate verbal description of software artifact based on its version number and its context in a tree of version numbers. 
+ \item Introduce unambiguous version numbering formalization.
+ \item Extend formalized version numbering approach with additional constructs (such as maturity levels, artifact trees) to cover common Software Configuration Management use cases.
+ % \item Providing interface for mapping "old style" version numbering to consistent version numbering implemented as a DSL for SCM.
+ \item Provide common patterns for generation of verbal description for software artifact based on its version number and context in an artifact tree. 
  \end{itemize} 
 
 One of the most advanced version numbering approaches is SemVer \cite{semver}. While strength of this approach is simplicity, there are also serious limitations of SemVer, such as:
@@ -94,36 +94,36 @@ There is another approach that is similar to version numbering - \textit{documen
 \label{sec:users}
 
 % How is the DSL going to be used, and what specifically is it used for?  
-Primary audience of DSL for SCM is Release and Build Engineers. DSL for SCM can also be used by Software Engineers, Software Testing Engineers and Support Engineers given that users have enough knowledge both about SCM domain and about basic principles of DSL for SCM. 
+Primary audience of DSL for SCM is Release and Build Engineers. DSL for SCM can also be used by Software Engineers, Software Testing Engineers and Support Engineers given that users have enough knowledge both about SCM domain and about basic principles of the DSL for SCM. 
 
-Release and Build Engineers are considered to be domain experts. Typical operations that Release and Build Engineers are able to perform using DSL for SCM are:
+Release and Build Engineers are considered to be domain experts. Typical DSL for SCM operations for Release and Build Engineers are:
 \begin{itemize}
-\item Building \textit{trees of software versions} in order to track history of software releases and releases of software components 
-\item Generating \textit{new version numbers} for upcoming software releases
-\item Handling tree \textit{insertions} and \textit{renaming} of tree elements
-\item Creating, applying and reusing \textit{filters of version numbers} (version \textit{templates} and \textit{ranges})
-\item Managing \textit{dependencies} between different versions of software applications and software components. Building \textit{dependency graphs}.
-\item Building abstractions on top of DSL for SCM that represent \textit{Software Product Lines} (SPL).
-\item \textit{Development, testing and deployment of upgrades} for different software versions. 
-\item Refactor version numbers (map inconsistent and ambiguous version numbers to formalized version numbering) to get rid of limitations of version numbering approaches that were used previously.
+\item Building \textit{trees of software artifacts} and their versions in order to track history of software releases and releases of software components 
+\item Generation of \textit{new version numbers} for upcoming software packages and releases
+\item Handling artifacts \textit{insertions} and \textit{renaming} of artifacts in artifact trees.
+% \item Creation, application and reusing \textit{filters of version numbers} (version \textit{templates} and \textit{ranges})
+%\item Managing \textit{dependencies} between different versions of software applications and software components. Building \textit{dependency graphs}.
+%\item Building abstractions on top of DSL for SCM that represent \textit{Software Product Lines} (SPL).
+%\item \textit{Development, testing and deployment of upgrades} for different software versions. 
+%\item Refactor version numbers (map inconsistent and ambiguous version numbers to formalized version numbering) to get rid of limitations of version numbering approaches that were used previously.
 \end{itemize}
 
 % What kind of users are affected by the DSL and in which way? Who is writing programs and who is using them? What is known or can be reasonably assumed about the (technical/domain) background of users? (Usually, it is safe to assume that users are domain experts.)
 
 % Specifically, what are the limitations of the DSL? What cannot be expressed? If different kinds of users are involved, what are there limitations of for the different user groups?
 
-The most serious limitation of DSL for SCM is that it can be used only by users with domain expertise with proper training that ensures their understanding of basic principles of DSL for SCM. We left high-level abstraction on top of DSL for SCM that enables users with SQL-like declarative language for selection and manipulation on version number set for future work.
+The most serious limitation of DSL for SCM is that it can be used only by users with domain expertise with proper training that ensures their understanding of basic principles of DSL for SCM. We left high-level abstraction on top of DSL for SCM that enables users with SQL-like declarative language for selection and manipulation on version sets for future work.
 
 \section{Outcomes}
 \label{sec:outcomes}
 
 % What is (are) the outcome(s) of executing a DSL program? What analyses of DSL programs are conceivable?  Note that, in general, a DSL program can produce a variety of results. In fact, this aspect makes the use of a DSL very attractive, and this questions is an important part of the analysis of the DSL's purpose.
 
-Typical output of DSL for SCM is \textit{tree of versions} that can be built given arbitrary list of version numbers using version inheritance rules. 
+Typical output of DSL for SCM is \textit{artifact tree} that can be built given initial artifact tree and list of DSL operations. 
 
-Another example of output that DSL for SCM can produce is a subset of version numbers created based on filters of version numbers.
+% Another example of output that DSL for SCM can produce is a subset of version numbers created based on filters of version numbers.
 
-Also new version numbers generated by DSL for SCM can be considered to be typical output of the program.
+Also new versions generated by DSL for SCM can be considered to be typical output of the program.
 
 % Consider, for example, a DSL for describing vacation plans (including
 % alternatives).  We can imagine that a vacation plan can be analyzed to yield a
@@ -186,7 +186,6 @@ Another use case is deployment and redeployment of the web-site (TODO: use class
 % What are the basic objects that are manipulated and used by the DSL? Basic
 % objects are those that are not composed out of other objects. 
 
-\subsection{VersionCompound}
 \lstdefinestyle{Haskell}
 {
 	language=Haskell,caption=Haskell,basicstyle=\footnotesize\ttfamily,breaklines=true,frame=single
@@ -197,9 +196,12 @@ Another use case is deployment and redeployment of the web-site (TODO: use class
 }
 \lstset{style=Haskell}          % Set your language (you can change the language for each code-block optionally)
 
-\begin{lstlisting}[style=Haskell,caption=BNF]
-VersionCompound ::= X | Int
-\end{lstlisting}
+\subsection{VersionCompound}
+
+%\begin{lstlisting}[style=Haskell,caption=BNF]
+%VersionCompound ::= X | Int
+%\end{lstlisting}
+
 \begin{lstlisting}[caption=Haskell]  % Start your code-block
 
 data VersionCompound = NumberPlaceholder
@@ -218,82 +220,25 @@ Number 1010145
 
 \subsection{VersionNumber}
 
-\begin{lstlisting}[caption=BNF]
-VersionNumber ::= VersionCompound | VersionNumber VersionCompound
-\end{lstlisting}	
+%\begin{lstlisting}[caption=BNF]
+%VersionNumber ::= VersionCompound | VersionNumber VersionCompound
+%\end{lstlisting}	
 
-\begin{lstlisting}
-
+\begin{lstlisting}[style=Haskell]
 data VersionNumber = VersionCompound VersionCompound
-             | SubVersion VersionNumber VersionCompound
-             deriving (Show)
+       | VersionNumber VersionCompound VersionNumber
+       deriving (Show)
 \end{lstlisting}
 
 %\begin{table}[h]
 %\begin{tabular}	{ |l|l| }
 %\hline
 	\begin{lstlisting}[style=Examples]
-VersionCompound NumberPlaceholder                      			
-VersionCompound (Number 1)             		
-VersionCompound (Number 45)            			
-SubVersion (VersionCompound NumberPlaceholder) NumberPlaceholder               			
-SubVersion (SubVersion (VersionCompound NumberPlaceholder) NumberPlaceholder ) NumberPlaceholder       			
-SubVersion (SubVersion (VersionCompound NumberPlaceholder) NumberPlaceholder ) (Number 1)        		
-SubVersion (SubVersion (SubVersion (VersionCompound (Number 1)) NumberPlaceholder ) NumberPlaceholder) (Number 0)   
+	VersionCompound (Number 5)
+	VersionNumber NumberPlaceholder ( VersionCompound NumberPlaceholder) 
+	VersionNumber (Number 3) ( VersionCompound (Number 1) )
+	VersionNumber NumberPlaceholder (VersionNumber NumberPlaceholder ( VersionCompound (Number 6) ) )	
 	\end{lstlisting}
-	%&
-%	\begin{lstlisting}[style=Examples,caption=]
-%	 X 
-%	 1 
-%	 45 
-%	 X.X 
-%	\end{lstlisting}
-	%\\
-%\hline
-%\end{tabular}
-%\end{table}
-
-%\subsection{MaturityLevelBuild}
-%
-%\begin{lstlisting}[caption=BNF]
-%MaturityLevelBuild ::= Dev | Test |  User		 
-%\end{lstlisting}		
-%
-%\begin{lstlisting}
-%
-%data MaturityLevelBuild = Dev
-%                        | Test
-%                        | User
-%                        deriving (Show)
-%\end{lstlisting}
-%
-%\begin{lstlisting}[style=Examples]
-%	Dev
-%	Test
-%	User
-%\end{lstlisting}
-
-%\subsection{MaturityLevelRelease}
-%	
-%\begin{lstlisting}[caption=BNF]
-%MaturityLevelRelease ::= Test | User | ReleaseCandidate | Stable
-%\end{lstlisting}	
-%
-%\begin{lstlisting}
-%
-%data MaturityLevelRelease = Test
-%                        | User
-%                        | ReleaseCandidate
-%                        | Stable
-%                        deriving (Show)
-%\end{lstlisting}
-%
-%\begin{lstlisting}[style=Examples]
-%	Test
-%	User
-%	ReleaseCandidate
-%	Stable
-%\end{lstlisting}
 
 \subsection{MaturityLevel}
 
@@ -301,9 +246,9 @@ SubVersion (SubVersion (SubVersion (VersionCompound (Number 1)) NumberPlaceholde
 %MaturityLevel ::= MaturityLevelBuild | MaturityLevelRelease	 
 %\end{lstlisting}	
 
-\begin{lstlisting}[caption=BNF]			    
-MaturityLevel ::= Dev | Test | User | ReleaseCandidate | Stable
-\end{lstlisting}	
+%\begin{lstlisting}[caption=BNF]			    
+%MaturityLevel ::= Dev | Test | User | ReleaseCandidate | Stable
+%\end{lstlisting}	
 
 %\begin{lstlisting}
 %
@@ -312,8 +257,7 @@ MaturityLevel ::= Dev | Test | User | ReleaseCandidate | Stable
 %                   deriving (Show)
 %
 %\end{lstlisting}
-\begin{lstlisting}
-
+\begin{lstlisting}[style=Haskell]
 data MaturityLevel = Dev
                    | Test
                    | User
@@ -341,156 +285,71 @@ data MaturityLevel = Dev
 
 \subsection{Version}
 
-\begin{lstlisting}[caption=BNF]
-Version ::= MaturityLevel VersionNumber
-\end{lstlisting}
+%\begin{lstlisting}[caption=BNF]
+%Version ::= MaturityLevel VersionNumber
+%\end{lstlisting}
 
-\begin{lstlisting}
-data Version = MaturityVersion MaturityLevel VersionNumber
-                deriving (Show)
-\end{lstlisting}
-
-\begin{lstlisting}[style=Examples]
-MaturityVersion Dev (VersionCompound (Number 1))
-MaturityVersion Test (SubVersion (SubVersion (VersionCompound (Number 0)) NumberPlaceholder ) (Number 1))
-MaturityVersion User (SubVersion (SubVersion (VersionCompound (Number 1)) (Number 0)) (Number 0))
-\end{lstlisting}
-
-\subsection{VersionNumberFilterCompound}
-
-\begin{lstlisting}[caption=BNF]			
-VersionNumberFilterCompound ::= Int | x | ? | A
-\end{lstlisting}
-
-\begin{lstlisting}
-
-data VersionNumberFilterCompound = FilterNumberPlaceholder
-                           | FilterNumber Int
-                           | EitherPlaceholderOrNumber
-                           | AllNumbers
-                           deriving (Show)
-                           
+\begin{lstlisting}[style=Haskell]
+data Version = MaturityVersion MaturityLevel VersionNumber  
+			| Version VersionNumber
 \end{lstlisting}
 
 \begin{lstlisting}[style=Examples]
-
+Version (VersionCompound (Number 1))
+MaturityVersion Dev (VersionNumber NumberPlaceholder (VersionCompound (Number 1)))
+MaturityVersion ReleaseCandidate (VersionNumber (Number 2) (VersionCompound (Number 1)))
 \end{lstlisting}
 
+\subsection{DocumentOrDirectory}
+\begin{lstlisting}[style=Haskell]
+type DocumentName = String
+type DirectoryName = String
+type DocumentContent = String
 
-\subsection{VersionNumberFilter}
-
-\begin{lstlisting}[caption=BNF]							
-VersionNumberFilter ::= VersionNumberFilterCompound | VersionNumberFilter VersionNumberFilterCompound
-\end{lstlisting}
-
-\begin{lstlisting}
-data VersionNumberFilter = VersionNumberFilterCompound VersionNumberFilterCompound
-                   | SubFilter VersionNumberFilter VersionNumberFilterCompound
-                   deriving (Show)
-\end{lstlisting}
-
-\begin{lstlisting}[style=Examples]
-
-\end{lstlisting}
-
-\subsection{VersionFilter}
-
-\begin{lstlisting}
-data VersionFilter = MaturityVersionFilter MaturityLevel VersionNumberFilter
-                   deriving (Show)
-\end{lstlisting}
-
-
-\begin{lstlisting}[style=Examples]
-
-\end{lstlisting}
-
-\subsection{VersionRange}
-
-\begin{lstlisting}[caption=BNF]
-VersionRange ::= VersionFilter
-  |  Version "-" Version
-  | ">=" Version
-  | "<=" Version
-  | VersionRange "+" VersionRange
-\end{lstlisting}
-
-\begin{lstlisting}
-
+data Document = Document DocumentName DocumentContent deriving (Eq)
+data Directory = Directory DirectoryName [DocumentOrDirectory] deriving (Eq)
+newtype DocumentOrDirectory = DocumentOrDirectory (Either Document Directory) deriving (Eq)
 \end{lstlisting}
 
 \begin{lstlisting}[style=Examples]
-
+DocumentOrDirectory (Left (Document "documentName" "documentContents"))
+DocumentOrDirectory (Right (Directory "directoryName" [DocumentOrDirectory (Left (Document "documentName" "documentContents"))] ))
 \end{lstlisting}
 
-\subsection{Platforms}
-\subsubsection{ConnectionType}
-\begin{lstlisting}
-data ConnectionType = FTP
-                    | LOCAL
-                    | SFTP
-                    | SSH
-                    | RSYNC
-                    deriving (Show)
-\end{lstlisting}
-\subsubsection{ConnectionProperty}
-\begin{lstlisting}
-data ConnectionProperty = Host String
-                        | Port Int
-                        | Username String
-                        | Password String
-                        | RemoteDirectory String
-                        deriving (Show)
-\end{lstlisting}
-\subsubsection{Connection}
-\begin{lstlisting}
-data Connection = Connection ConnectionType [ConnectionProperty]
-                deriving (Show)
+\subsection{Artifact}
+\begin{lstlisting}[style=Haskell]
+type BranchName = String
+type Timestamp = Integer
 
-\end{lstlisting}
-\subsubsection{Platform}
-\begin{lstlisting}
-data Platform = PlatformName String Connection
-                deriving (Show)
+data Branch = Branch BranchName Version DocumentOrDirectory
+data Snapshot = Snapshot Timestamp Version DocumentOrDirectory 
+newtype Artifact = Artifact (Either Branch Snapshot) deriving (Show, Eq)
 \end{lstlisting}
 
-\subsection{Projects}
-\subsubsection{RepositoryType}
-\begin{lstlisting}
-data RepositoryType = SVN
-                    | GIT
-                    | HG
-                    | DARCS
-                    | CVS
-                    | P4
-                    | ACCUREV
-                    | BAZAAR
-                    | TFS
-                    | VSS
-                    | SCCS
-                    | RCS
-                    | FILESYSTEM
-                    deriving (Show)
-\end{lstlisting}
-\subsubsection{RepositoryProperty}
-\begin{lstlisting}
-data RepositoryProperty = RepositoryHost String
-                         | RepositoryPort Int
-                         | RepositoryUsername String
-                         | RepositoryPassword String
-                        deriving (Show)
-\end{lstlisting}
-\subsubsection{Repository}
-\begin{lstlisting}
-data Repository = Repository RepositoryType [RepositoryProperty]
-                deriving (Show)
-\end{lstlisting}
-\subsubsection{Project}
-\begin{lstlisting}
-data Project = Project String Repository
-              deriving (Show)
+\begin{lstlisting}[style=Examples]
+Branch "trunk" (Version (VersionCompound NumberPlaceholder)) (DocumentOrDirectory (Left (Document "documentName" "documentContents")))
+Snapshot 1424012390 (Version (VersionCompound (Number 1))) (DocumentOrDirectory (Left (Document "documentName" "documentContents")))
+Artifact ( Right (Snapshot 1424012390 (Version (VersionCompound (Number 1))) (DocumentOrDirectory (Left (Document "documentName" "documentContents")))))
 \end{lstlisting}
 
+\subsection{ArtifactTree}
+We use object ArtifactTree to represent \textit{artifact trees} in our DSL.
+\begin{lstlisting}[style=Haskell]
+type ArtifactTree = RoseTree Artifact
+\end{lstlisting}
+
+\begin{lstlisting}[style=Examples]
+initialArtifactTree :: ArtifactTree 
+initialArtifactTree = RoseTree ( liftSnapshot $ (Snapshot 0 (Version $ VersionCompound (Number 0) ) ) ( liftDocument $ Document "" "") ) 
+ [ RoseTree ( liftBranch $ (Branch "trunk" ( Version $ VersionCompound $ NumberPlaceholder ) ) (liftDocument $ Document "" "") ) [] ]
+ 
+> displayArtifactTree initialArtifactTree
+ 
+    0    
+    |    
+trunk (x)
+
+\end{lstlisting}
 % As a general rule, the fewer basic objects one needs, the better, because the resulting DSL design will be more concise and elegant.
 %
 % The basic objects should be described by a set of Haskell \prog{type} and
@@ -508,21 +367,69 @@ data Project = Project String Repository
 % home :: Point
 % home = (10,13)
 % \end{program}
+ \begin{lstlisting}
+initialArtifactTree :: ArtifactTree 
+initialArtifactTree = RoseTree ( liftSnapshot $ (Snapshot 0 (Version $  VersionCompound (Number 0) ) ) ( liftDocument $ Document "" "") ) 
+ [ RoseTree ( liftBranch $ (Branch "trunk" ( Version $ VersionCompound $ NumberPlaceholder ) ) (liftDocument $ Document "" "") ) [] ]
+ 
+> displayArtifactTree initialArtifactTree 
+
+    0    
+    |    
+trunk (x)
+ 
+ program = generateSnapshot "trunk" >>> generateSnapshot "trunk" >>> createReleaseBranch "trunk"
+
+ resultTree = program initialArtifactTree
+ 
+> displayArtifactTree resultTree
+ 
+        x.0        
+         |         
+    trunk (x.x)    
+         |         
+  ------------     
+ /    |       \    
+x.1  x.2     x.3   
+              |    
+          0.x (0.x)
+
+ 
+ \end{lstlisting}
 %
 % Also, list current limitations that you expect in a future iterations to overcome.
 
-\RevisionNeeded
+% \RevisionNeeded
 
 
 
 \section{Operators and Combinators}
 \label{sec:comb}
 
-%Identify operators that either transform objects into one another or
+% Identify operators that either transform objects into one another or
 % build more complex objects out of simpler (and ultimately basic) ones.
 %
 % Depending on what implementation or form of embedding will be chosen,
 % operators may be given as constructors of data types or functions.
+
+\begin{lstlisting}[style=Haskell]
+generateSnapshot :: BranchName -> ArtifactTree -> ArtifactTree
+\end{lstlisting}
+\begin{lstlisting}[style=Haskell]
+createExperimentalBranch :: BranchName -> ArtifactTree -> ArtifactTree
+\end{lstlisting}
+\begin{lstlisting}[style=Haskell]
+createReleaseBranch :: BranchName -> ArtifactTree -> ArtifactTree
+\end{lstlisting}
+\begin{lstlisting}[style=Haskell]
+createSupportBranch :: BranchName -> ArtifactTree -> ArtifactTree
+\end{lstlisting}
+\begin{lstlisting}[style=Haskell]
+editArtifact :: BranchName -> DocumentOrDirectory -> ArtifactTree -> ArtifactTree
+\end{lstlisting}
+\begin{lstlisting}[style=Haskell]
+deploy :: ArtifactTree -> DeploymentRules -> PlatformDB -> PlatformDB
+\end{lstlisting}
 
 % Combinators are higher-order functions that encode control structures of the
 % DSL. The function \prog{map} is a combinator that realizes a looping construct
@@ -536,23 +443,103 @@ data Project = Project String Repository
 % demonstrate how the examples from Section \ref{sec:examples} can be
 % represented. All limitations encountered here should be classified as either:
 
-\begin{enumerate}[(1)]\denseitems
-\item Temporary
-\item Fundamental
-\end{enumerate}
-%
-Temporary limitations should be noted in this section and in  Section
-\ref{sec:objects} as \emph{TO DO} items for future revisions of the design.
-%
-Fundamental limitations should be reported and listed in detail in Section
-\ref{sec:users}.
 
-\RevisionNeeded
+\begin{enumerate}[(1)]\denseitems
+\item \textbf{Temporary}. It is impossible to define deployment rules using syntax different than Haskell object definition syntax. For example: 
+\begin{lstlisting}[style=Haskell]
+deploymentRule = DeploymentRuleVersion ( Version ( VersionCompound $ Number 10 ) ) "platform1" 
+\end{lstlisting}
+Another temporary limitation of the DSL is the absence of error-handling. DSL does not generate meaningful errors in situations when incorrect input has been provided. 
+\item \textbf{Fundamental}. Operators have long list of arguments with unclear order. Some of operators are incompatible with other operators. For example, it is impossible to chain \emph{deploy} operator with other operators. 
+\end{enumerate}
+
+
+%
+% Temporary limitations should be noted in this section and in  Section
+% \ref{sec:objects} as \emph{TO DO} items for future revisions of the design.
+%
+% Fundamental limitations should be reported and listed in detail in Section
+% \ref{sec:users}.
+
+% \RevisionNeeded
 
 
 
 \section{Interpretation and Analyses}
 \label{sec:analysis}
+In order to provide examples of interpretation and analyses in our DSL, we provide list of self-explanatory listings for executions of DSL programs: 
+\begin{lstlisting}
+initialArtifactTree :: ArtifactTree 
+initialArtifactTree = RoseTree ( liftSnapshot $ (Snapshot 0 (Version $  VersionCompound (Number 0) ) ) ( liftDocument $ Document "" "") ) 
+ [ RoseTree ( liftBranch $ (Branch "trunk" ( Version $ VersionCompound $ NumberPlaceholder ) ) (liftDocument $ Document "" "") ) [] ]
+ 
+> displayArtifactTree initialArtifactTree 
+
+    0    
+    |    
+trunk (x)
+ \end{lstlisting}
+ \begin{lstlisting}
+ program = generateSnapshot "trunk" 
+ 
+> displayArtifactTree (program initialArtifactTree)
+ 
+    0    
+    |    
+trunk (x)
+    |    
+    1   
+ 
+ \end{lstlisting}
+ 
+ \begin{lstlisting}
+ program = generateSnapshot "trunk" >>> generateSnapshot "trunk"
+ 
+> displayArtifactTree (program initialArtifactTree)
+ 
+    0    
+    |    
+trunk (x)
+    |    
+    --   
+   /  \  
+   1  2  
+ 
+ \end{lstlisting}
+ 
+  \begin{lstlisting}
+ program = generateSnapshot "trunk" >>> generateSnapshot "trunk" >>> createReleaseBranch "trunk"
+ 
+> displayArtifactTree (program initialArtifactTree)
+ 
+        x.0        
+         |         
+    trunk (x.x)    
+         |         
+  ------------     
+ /    |       \    
+x.1  x.2     x.3   
+              |    
+          0.x (0.x)
+ 
+ \end{lstlisting}
+ \begin{lstlisting}
+ program = generateSnapshot "trunk" >>> generateSnapshot "trunk" >>> createReleaseBranch "trunk" >>> createSupportBranch "trunk"
+ 
+> displayArtifactTree (program initialArtifactTree)
+ 
+                 x.x.0                  
+                   |                    
+             trunk (x.x.x)              
+                   |                    
+   ------------------------------       
+  /      |         |             \      
+x.x.1  x.x.2     x.x.3         x.x.4    
+                   |             |      
+              0.x (x.0.x)  0.x.x (0.x.x)
+
+ 
+ \end{lstlisting}
 
 % Provide a precise description of the different outcomes of the DSL. This
 % information is typically provided by Haskell function signatures (that is,
@@ -616,17 +603,46 @@ Fundamental limitations should be reported and listed in detail in Section
 
 \section{Design Evolution}
 \label{sec:evol}
+It seemed attractive at first to implement a DSL that provides operations only with \textit{version numbers}. But it turned out that it would be insufficient for a DSL to have such operations. As a result, DSL domain has been extended to \textit{artifact trees}. While old operators for version numbers still exist in our DSL, we have extended list of operators with a set of new operators. 
 
-As you iterate over different designs of your DSL, it is quite instructive to
-document some of the old, obsolete designs, that is, show the type definitions
-and function signatures, explain why this design seemed attractive at first
-and then what motivated you to change it.
+Old operators:
+\begin{lstlisting}[style=Haskell]
+decrement :: VersionNumber -> VersionNumber
+decrementDimension :: NumberOfDimensions -> VersionNumber -> VersionNumber
+increment :: VersionNumber -> VersionNumber
+incrementDimension :: NumberOfDimensions -> VersionNumber -> VersionNumber
+getNumberOfDimensions :: VersionNumber -> NumberOfDimensions
+appendDimension :: VersionNumber -> VersionNumber
+generateNewVersionNumber :: VersionNumber -> VersionNumber
+incrementReleaseNumber :: VersionNumber -> VersionNumber
+incrementSupportNumber :: VersionNumber -> VersionNumber
+freezeExperimental :: VersionNumber -> VersionNumber
+freezeRelease :: VersionNumber -> VersionNumber
+freezeSupport :: VersionNumber -> VersionNumber
+isExperimentalSnapshot :: VersionNumber -> Bool
+isReleaseSnapshot :: VersionNumber -> Bool
+isSupportSnapshot :: VersionNumber -> Bool
+\end{lstlisting}
 
-This part may seem like an unnecessary burden to you, but it helps you and
-others to understand your current design, and it probably answers questions
-that users (or reviewers) of the DSL might have about the design, because they
-may have thought of your initial design also and are wondering why it has not
-been adopted.
+New operators:
+\begin{lstlisting}[style=Haskell]
+generateSnapshot :: BranchName -> ArtifactTree -> ArtifactTree
+createExperimentalBranch :: BranchName -> ArtifactTree -> ArtifactTree
+createReleaseBranch :: BranchName -> ArtifactTree -> ArtifactTree
+createSupportBranch :: BranchName -> ArtifactTree -> ArtifactTree
+editArtifact :: BranchName -> DocumentOrDirectory -> ArtifactTree -> ArtifactTree
+deploy :: ArtifactTree -> DeploymentRules -> PlatformDB -> PlatformDB
+\end{lstlisting}
+% As you iterate over different designs of your DSL, it is quite instructive to
+% document some of the old, obsolete designs, that is, show the type definitions
+% and function signatures, explain why this design seemed attractive at first
+% and then what motivated you to change it.
+
+% This part may seem like an unnecessary burden to you, but it helps you and
+% others to understand your current design, and it probably answers questions
+% that users (or reviewers) of the DSL might have about the design, because they
+% may have thought of your initial design also and are wondering why it has not
+% been adopted.
 
 
 
